# ipsd

./: .clang-format  .gitignore  CONFIGURING.md  README.md  TODO.md  meson.build  meson.options
aux/: complain.c  entry.c  meson.build
aux/include/aux/: complain.h  devel.h  entry.h  platform.h
aux/include/aux/memory/: libc.h  memory.h  region.h  system.h
aux/memory/: libc.c  memory.c  region.c  system.c
ipsd/: articulate.c  articulate.h  dispatch.c  dispatch.h  ipsd.c  language.h  meson.build  seatbelt.c  seatbelt.h
ipsd/support/: python.c  python.h
scripts/: ipsdf_conv.py
